Freedom Sanbox Ant Deploy/src/objects/TopUpGoal__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Store top up goal Information like price, discount etc</description>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Price__c</fullName>
        <label>Goal Price</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductizedFP_launch_date__c</fullName>
        <description>This field is used in the &quot;FamilyMemberDetailController&quot; class. For financial planning check is mandatory if created date of the entity is greater than this date.</description>
        <label>Productized FP launch date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Names__c</fullName>
        <description>Comma separated profile name having full access to edit purchased order.</description>
        <label>Profile Names</label>
        <type>TextArea</type>
    </fields>
    <label>TopUp Goal</label>
</CustomObject>